--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "Challenge",
+  "name": "login-challenge",
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^0.7.12",
     "express": "^4.12.3",
     "express-handlebars": "^1.1.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.4.1",
     "morgan": "^1.3.2",
     "body-parser": "^1.9.0",
     "cookie-parser": "^1.3.3",
@@ -21,5 +26,21 @@
     "fs": "^0.0.2",
     "http": "^0.0.0",
     "https": "^1.0.0"
-  }
+  },
+  "version": "1.0.0",
+  "description": "nodeJS login app using ExpressJS and PassportJS",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ffflorian/login-challenge.git"
+  },
+  "author": "ffflorian",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/ffflorian/login-challenge/issues"
+  },
+  "homepage": "https://github.com/ffflorian/login-challenge#readme"
 }
